--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ test_lib = []
 [dependencies]
 chrono = { version = "0.4.31", optional = true }
 dhat = { version = "0.3.2", optional = true }
+glam = "0.25.0"
 itertools = "0.12.0"
 md5 = "0.7.0"
 nalgebra = "0.32.3"
